--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -5,10 +5,11 @@ jobs:
   build:
     name: Build and test
     runs-on: ubuntu-latest      # Sets the build environment a machine with the latest Ubuntu installed
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up .NET core
-    - uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v1
       with: 
         dotnet-version: 5.0.301
       
