Adding additional Stages

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -21,5 +21,11 @@ jobs:
     
     - name: Build Typescript Code
       run: npm install
+    - name: Running Typescript Tests
+      run: npm t
+      working-directory: DotnetTemplate.Web
+    -name: Running Lint
+      run: npm run lint
+      working-directory: DotnetTemplate.Web
 
 
