--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -21,13 +21,13 @@ jobs:
     
     - name: Build Typescript Code
       run: npm install
-
-    - name: Run Typescript Code  
       run: npm run build
+      working-directory: ./DotnetTemplate.Web
       
+
     - name: Running Typescript Tests
       run: npm t
-      working-directory: DotnetTemplate.Web
+      working-directory: ./DotnetTemplate.Web
 
     - name: Running Lint
       run: npm run lint
