--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -51,7 +51,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: user/app:latest
+          tags: kiranuppi84/corndel-devops:latest
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
